@@ -4,6 +4,10 @@
 1716.	[doc]		named.conf(5) was being installed in the wrong
 			location.  [RT# 12441]
 
+1714.	[bug]		dig/host/nslookup were only trying the first
+			address when a nameserver was specified by name.
+			[RT #12286]
+
 	--- 9.2.4rc8 released ---
 
 1709.	[port]		solaris: add SMF support from Sun.
